# tasm-lib

./: CHANGELOG.md  Cargo.toml
tasm-lib/: Cargo.toml
tasm-lib/benchmarks/: tasmlib_arithmetic_u128_overflowing_add.json  tasmlib_arithmetic_u128_safe_add.json  tasmlib_arithmetic_u128_sub.json  tasmlib_arithmetic_u160_div_mod.json  tasmlib_arithmetic_u160_safe_mul.json  tasmlib_array_inner_product_of_470_xfes.json  tasmlib_array_inner_product_of_599_xfes.json  tasmlib_array_inner_product_of_601_xfes.json  tasmlib_array_inner_product_of_603_xfes.json  tasmlib_array_inner_product_of_604_xfes.json  tasmlib_array_inner_product_of_three_rows_with_weights_Bfe_mainrowelem.json  tasmlib_array_inner_product_of_three_rows_with_weights_Xfe_mainrowelem.json  tasmlib_list_push___digest.json  tasmlib_structure_verify_nd_si_integrity___ProofCollectionLookalike.json  tasmlib_structure_verify_nd_si_integrity___TransactionKernelLookalike.json  tasmlib_verifier_fri_verify.json  tasmlib_verifier_master_table_air_constraint_evaluation.json  tasmlib_verifier_master_table_divide_out_zerofiers.json  tasmlib_verifier_master_table_verify_Aux_table_rows.json  tasmlib_verifier_stark_verify_dynamic_inner_padded_height_256_fri_exp_4.json  tasmlib_verifier_stark_verify_dynamic_inner_padded_height_512_fri_exp_4.json  tasmlib_verifier_stark_verify_static_inner_padded_height_256_fri_exp_4.json  tasmlib_verifier_stark_verify_static_inner_padded_height_512_fri_exp_4.json
tasm-lib/src/: assertion_error_ids.md  data_type.rs  lib.rs  library.rs  memory.rs  snippet_bencher.rs  test_helpers.rs
tasm-lib/src/array/: horner_evaluation.rs  inner_product_of_xfes.rs  (+3 more)
(+161 files in other folders)
