[package]
name = "tasm-lib"
description = """
Code snippets for Triton VM assembly with tests and statistics.
"""

keywords = ["Triton-VM", "zero-knowledge", "STARK", "virtual-machine", "recursive"]
categories = ["cryptography"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
macro_rules_attr = "0.1.3"
proptest = { version = "1.11", default-features = false, features = ["std"] }
proptest-arbitrary-adapter = "0.1"
rayon = "1"
test-strategy = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"

# Workaround for Rust 1.87.0 (see also: <https://github.com/rust-lang/rust/issues/141048>)
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory"]

[dependencies]
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
const_format = "0.2"
hex = "^0.4.3"
itertools = "0.14"
ndarray = { version = "0.17" }
num = "0.4"
num-traits = "0.2"
rand = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tasm-object-derive.workspace = true
triton-vm = { version = "7.0.0", default-features = false }
web-time = "1.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lints]
workspace = true
